[package]
name = "rtp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
async_async_io = "0.2"
byteorder = "1"
csv = "1"
dre = { git = "https://github.com/Banyc/dre.git", tag = "v0.0.3" }
mpudp = { git = "https://github.com/Banyc/mpudp.git", tag = "v0.0.3" }
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.56" }
rand = "0.8"
self_assign = { git = "https://github.com/Banyc/self_assign.git", tag = "v0.0.3" }
serde = { version = "1", features = ["derive"] }
tap = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
tokio-util = "0.7"
udp_listener = { git = "https://github.com/Banyc/udp_listener.git", tag = "v0.0.13" }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
file_transfer = { git = "https://github.com/Banyc/file_transfer.git", tag = "v0.0.6" }

[profile.profiling]
inherits = "release"
debug = true
